fixed skills on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ table p {
 }
 
 .skills {
+  width: 100%;
   font-size: 20px;
   border-radius: 5px;
   background-color: #fff;
@@ -121,7 +122,7 @@ table p {
   cursor: default;
 }
 
-.div-skills {
+.div-skills > div {
   display: flex;
 }
 
